# LynxEngine

./: .gitignore  CMakeLists.txt  README.md
include/Actors/: SampleActor.hpp  SampleActor2.hpp
include/Engine/Actors/: IActor.hpp
include/Engine/Application/: ActorsInScene.hpp  Application.hpp
include/Engine/Components/: CustomMaterialComponent.hpp  IComponent.hpp  LightComponent.hpp  MaterialComponent.hpp  MeshComponent.hpp  SkeletalMeshComponent.hpp  SoundComponent.hpp  SpriteComponent.hpp  TextComponent.hpp
include/Engine/System/: Input.hpp  Loader.hpp  Renderer.hpp
include/Lynx/Actors/: IActor.hpp
include/Lynx/Application/: ActorsInScene.hpp  Application.hpp
include/Lynx/Components/: CameraComponent.hpp  CustomMaterialComponent.hpp  EffectComponent.hpp  IComponent.hpp  LightComponent.hpp  MaterialComponent.hpp  MeshComponent.hpp  SkeletalMeshComponent.hpp  SoundComponent.hpp  SpriteComponent.hpp  TextComponent.hpp
include/Lynx/Resources/: Resources.hpp
include/Lynx/System/: Input.hpp  Loader.hpp  Renderer.hpp  System.hpp
include/Lynx/Utility/: Transform.hpp
include/Scenes/: SceneCommonRegion.hpp  TestScene.hpp
resources/shaders/Deferred/: Lighting.hlsl  Lighting_frag.spv  Lighting_vert.spv
resources/shaders/Shadow/: shadow.hlsl
src/: main.cpp
src/Actors/: SampleActor.cpp  SampleActor2.cpp
src/Engine/Components/: SkeletalMeshComponent.cpp  SoundComponent.cpp  SpriteComponent.cpp  TextComponent.cpp
src/Engine/System/: Loader.cpp  Renderer.cpp
src/Lynx/Components/: CameraComponent.cpp  CustomMaterialComponent.cpp  LightComponent.cpp  MaterialComponent.cpp  MeshComponent.cpp  SkeletalMeshComponent.cpp  SoundComponent.cpp  SpriteComponent.cpp  TextComponent.cpp
src/Lynx/Resource/: Resource.cpp
src/Scenes/: TestScene.cpp
(+4 files in other folders)
